--- a/Configuration/appsettings.json
+++ b/Configuration/appsettings.json
@@ -4,5 +4,12 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "endpoint": {
+    "address": "locahost",
+    "port": 5000,
+    "test": {
+      "x": "test"
+    }
   }
 }
